--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             "@type": "Place",
             "address": {
               "@type": "PostalAddress",
-              "addressLocality": "Arusha",
+              "addressLocality": "Arusha,Dar-es-salaam,Dodoma",
               "addressCountry": "TZ"
             }
           },
@@ -42,13 +42,13 @@
             "@type": "ContactPoint",
             "contactType": "Customer Service",
             "email": "Kinguelectricaltz@gmail.com",
-            "telephone": "+255677014740",
+            "telephone": "+255677014740,+255763957908,+255682843552",
             "availableLanguage": ["English", "Swahili"]
           },
           "address": {
             "@type": "PostalAddress",
             "streetAddress": "Plot No. 485, Block 43, Nzasa",
-            "addressLocality": "Arusha",
+            "addressLocality": "Dar-es-salaam,Arusha,Dodoma",
             "addressCountry": "TZ",
             "postalCode": "255"
           },
@@ -69,53 +69,55 @@
             "Power Distribution",
             "Industrial Automation",
             "Telecom Infrastructure",
+            "Diesel Generator spares Supply",
+            "Electrical Equipment and accessories Supply",
             "Technical Training"
           ],
           "makesOffer": [
             {
               "@type": "Service",
               "name": "Generator Services",
-              "description": "Installation, maintenance, repair, testing and commissioning of diesel generators up to 1000kVA."
+              "description": "Installation, Maintenance, Repair, Testing and Commissioning of Diesel generators up to 1000kVA."
             },
             {
               "@type": "Service",
               "name": "Solar Systems",
-              "description": "Design, installation and maintenance of solar power systems for residential, commercial and industrial applications."
+              "description": "Design, Installation and Maintenance of solar power systems for Residential, Commercial and Industrial applications."
             },
             {
               "@type": "Service",
               "name": "Air Conditioning",
-              "description": "Professional installation, maintenance, repair and servicing of all types of air conditioning systems."
+              "description": "Professional Installation, Maintenance, Repair and Servicing of all types of Air conditioning systems."
             },
             {
               "@type": "Service",
               "name": "PLC & Automation",
-              "description": "PLC and UC programming, InteliLite & DSE configuration, telecom automation and control systems."
+              "description": "PLC and UC programming, InteliLite & DSE configuration, Telecom Automation and Control systems."
             },
             {
               "@type": "Service",
               "name": "ATS Systems",
-              "description": "Design, installation, maintenance and repair of Automatic Transfer Switch systems."
+              "description": "Design, Installation, Maintenance and Repair of Automatic Transfer Switch systems."
             },
             {
               "@type": "Service",
               "name": "HPU Conversion",
-              "description": "HPU training, automation design and conversion of HPU units into standard diesel generators."
+              "description": "HPU training, Automation Design and Conversion of HPU units into standard diesel generators."
             },
             {
               "@type": "Service",
               "name": "Technical Training",
-              "description": "Comprehensive technical training on electrical and mechanical aspects of generators for trainees and telecom Operation & Maintenance companies."
+              "description": "Comprehensive Technical Training on Electrical and Mechanical aspects of generators for trainees and telecom Operation & Maintenance companies."
             },
             {
               "@type": "Service",
               "name": "Electrical Installations",
-              "description": "Residential, commercial and industrial electrical installation works."
+              "description": "Residential, Commercial and Industrial Electrical Installation works."
             },
             {
               "@type": "Service",
               "name": "Security & ICT Systems",
-              "description": "CCTV installation, RMS Modbus mapping, rectifier, VFD and AVR systems."
+              "description": "CCTV installation, RMS Modbus mapping, Rectifier, VFD and AVR systems."
             }
           ],
           "memberOf": {
@@ -128,7 +130,7 @@
             "credentialCategory": "ProfessionalLicense",
             "name": "EWURA Class A Electrical Installation License",
             "identifier": "ELA-2022-008",
-            "validUntil": "2025-04-28"
+            "validUntil": "2030-04-28"
           }
         }
       ]
