Update Kingu Electrical (T) Ltd.html

--- a/Kingu Electrical (T) Ltd.html
+++ b/Kingu Electrical (T) Ltd.html
@@ -140,10 +140,16 @@
     <style>
         :root {
             /* EXACT COLORS FROM COMPANY PROFILE */
+            --primary-green: #00A859;
+            --secondary-blue: #0057B7;
+            --accent-gold: #FFD700;
+            --background-light: #F5F5F5;
+            --border-gray: #DDDDDD;
+             --text-dark: #333333;
             --primary-blue: #0056b3;      /* Main blue from cover page */
             --secondary-blue: #003d82;     /* Darker blue for accents */
             --accent-orange: #ff6600;      /* Orange accent from service icons */
-            --light-blue: #e6f0ff;         /* Light blue background */
+            --light-blue: #00A859;         /* Light blue background */
             --medium-gray: #666666;        /* Text gray */
             --dark-gray: #333333;          /* Dark text */
             --white: #ffffff;
