--- a/index.html
+++ b/index.html
@@ -1124,7 +1124,7 @@
                         <h3>Telecom HPU Conversion</h3>
                         <p>Successfully converted multiple HPU units (F2M2011, F3M2011, F4M2011) into standard diesel generators for telecom infrastructure across Tanzania.</p>
                         <p><strong>Client:</strong> Major Telecom Infrastructure Provider</p>
-                        <p><strong>Year:</strong> 2022-2023</p>
+                        <p><strong>Year:</strong> 2018-2023</p>
                     </div>
                 </div>
 
@@ -1134,7 +1134,7 @@
                         <h3>Industrial Generator Installation</h3>
                         <p>Complete installation and commissioning of 800kVA diesel generator set with integrated ATS for a major manufacturing facility.</p>
                         <p><strong>Client:</strong> Manufacturing Plant</p>
-                        <p><strong>Year:</strong> 2023</p>
+                        <p><strong>Year:</strong> 2016-2025</p>
                     </div>
                 </div>
 
@@ -1144,7 +1144,7 @@
                         <h3>Data Center Power Distribution</h3>
                         <p>Design and implementation of 600A dual-bus DC Power Distribution Unit for critical data center infrastructure.</p>
                         <p><strong>Client:</strong> Data Center Operator</p>
-                        <p><strong>Year:</strong> 2023</p>
+                        <p><strong>Year:</strong> 2022-2023</p>
                     </div>
                 </div>
 
@@ -1154,7 +1154,7 @@
                         <h3>Technical Training Program</h3>
                         <p>Developed and delivered specialized generator technical training programs for multiple telecom O&M teams across Tanzania.</p>
                         <p><strong>Client:</strong> Telecom O&M Companies</p>
-                        <p><strong>Year:</strong> 2023-2024</p>
+                        <p><strong>Year:</strong> 2017-2024</p>
                     </div>
                 </div>
             </div>
@@ -1307,12 +1307,12 @@
                 <div class="footer-column">
                     <h3>Contact Info</h3>
                     <p><img src="assets/icons/location.png" alt="Location" class="contact-icon"> P.O. Box 62313, Dar es Salaam</p>
-                    <p><img src="assets/icons/phone.png" alt="Phone" class="contact-icon"> +255 677 014 740</p>
+                    <p><img src="assets/icons/phone.png" alt="Phone" class="contact-icon"> +255 677 014 740, +255763957908, +255682843552</p>
                     <p><img src="assets/icons/email.png" alt="Email" class="contact-icon"> Kinguelectricaltz@gmail.com</p>
                     <p><a href="https://www.facebook.com/KinguElectrical/" target="_blank" style="color:inherit; text-decoration:none;">
                         <img src="assets/icons/facebook.png" alt="Facebook" class="contact-icon"> Facebook Page
                     </a></p>
-                    <p><img src="assets/icons/company.png" alt="Office" class="contact-icon"> Plot No. 485, Block 43, Nzasa</p>
+                    <p><img src="assets/icons/company.png" alt="Office" class="contact-icon"> Plot No. 485, Block 43, Nzasa,Dar-es-salaam, Tanzania</p>
                 </div>
             </div>
 
