--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Kingu Electrical Company Limited | Electrical Engineering Experts in Tanzania</title>
+    <title>Kingu Electrical  | Electrical Engineering Experts in Tanzania</title>
     <meta name="description" content="Leading Tanzanian electrical engineering company providing generator services, PLC programming, HPU conversion, ATS systems, CCTV, and industrial electrical installations.">
     <meta name="keywords" content="Kingu Electrical, Electrical Company Tanzania, Generator Installation, PLC Programming, HPU Conversion, ATS Design, Electrical Engineers Arusha, EWURA Licensed, BRELA Registered">
 
@@ -11,8 +11,8 @@
     <meta property="og:title" content="Kingu Electrical Company Limited | Electrical Engineering Experts">
     <meta property="og:description" content="Quality Electrical Services with a Professional Experience">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.kinguelectrical.co.tz">
-    <meta property="og:image" content="https://www.kinguelectrical.co.tz/logo.jpg">
+    <meta property="og:url" content="https://www.kingueletrical.co.tz">
+    <meta property="og:image" content="https://www.kingueletrical.co.tz/logo.jpg">
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
@@ -27,10 +27,10 @@
       "@graph": [
         {
           "@type": "ElectricalContractor",
-          "@id": "https://www.kinguelectrical.co.tz/#organization",
+          "@id": "https://www.kingueletrical.co.tz/#organization",
           "name": "Kingu Electrical Company Limited",
-          "url": "https://www.kinguelectrical.co.tz",
-          "logo": "https://www.kinguelectrical.co.tz/logo.jpg",
+          "url": "https://www.kingueletrical.co.tz",
+          "logo": "https://www.kingueletrical.co.tz/logo.jpg",
           "description": "Leading Tanzanian electrical engineering company providing generator services, PLC automation, HPU conversion, ATS systems, and industrial electrical installations with professional experience.",
           "foundingDate": "2022-07-30",
           "foundingLocation": {
@@ -44,7 +44,7 @@
           "contactPoint": {
             "@type": "ContactPoint",
             "contactType": "Customer Service",
-            "email": "Kinguelectricaltz@gmail.com",
+            "email": "Kinguelectricaltz@gmail.com" "kinguelectrical@kingueletrical.com",
             "telephone": "+255677014740",
             "availableLanguage": ["English", "Swahili"]
           },
@@ -942,7 +942,7 @@
 </head>
 <body>
     <!-- WhatsApp Float Button -->
-    <a class="whatsapp" href="https://wa.me/255677014740" target="_blank" aria-label="Chat on WhatsApp">
+    <a class="whatsapp" href="https://wa.me/255682843552" target="_blank" aria-label="Chat on WhatsApp">
         <img src="assets/icons/whatsapp.png" alt="WhatsApp">
     </a>
 
@@ -1007,7 +1007,7 @@
                         <img src="assets/icons/company.png" alt="Company">
                     </div>
                     <h3>Our Story</h3>
-                    <p>Founded in 2022 by highly experienced electrical engineers, Kingu Electrical Company Limited has grown to become a leading electrical engineering and product trading company in Tanzania, serving clients across East Africa with headquarters in Arusha and Dar-es-salaam.</p>
+                    <p>Founded in 2022 by highly Experienced Electrical engineers, Kingu Electrical Company Limited has grown to become a leading electrical engineering and product trading company in Tanzania, serving clients across East Africa with headquarters in Arusha and Dar-es-salaam.</p>
                 </div>
 
                 <div class="card">
@@ -1015,7 +1015,7 @@
                         <img src="assets/icons/mission.png" alt="Mission">
                     </div>
                     <h3>Our Mission</h3>
-                    <p>To deliver exceptional electrical engineering solutions that exceed client expectations while maintaining the highest standards of safety, quality, and professionalism in all our projects.</p>
+                    <p>To deliver Exceptional Electrical Engineering Solutions that exceed client expectations while Maintaining the highest standards of safety, quality, and professionalism in all our projects.</p>
                 </div>
 
                 <div class="card">
