--- a/Kingu electrical.html
+++ b/Kingu electrical.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Kingu Electrical, Electrical Company Tanzania, Generator Installation, PLC Programming, HPU Conversion, ATS Design, Electrical Engineers Arusha, EWURA Licensed, BRELA Registered">
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Kingu Electrical Company Limited | Electrical Engineering Experts">
+    <meta property="og:title" content="Kingu Electrical | Electrical Engineering Experts">
     <meta property="og:description" content="Quality Electrical Services with a Professional Experience">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.kingueletrical.co.tz">
