--- a/Kingu electrical.html
+++ b/Kingu electrical.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Kingu Electrical  | Electrical Engineering Experts in Tanzania</title>
+    <title>Kingu Electrical Company Ltd  | Electrical Engineering Experts in Tanzania</title>
     <meta name="description" content="Leading Tanzanian electrical engineering company providing generator services, PLC programming, HPU conversion, ATS systems, CCTV, and industrial electrical installations.">
     <meta name="keywords" content="Kingu Electrical, Electrical Company Tanzania, Generator Installation, PLC Programming, HPU Conversion, ATS Design, Electrical Engineers Arusha, EWURA Licensed, BRELA Registered">
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Kingu Electrical | Electrical Engineering Experts">
+    <meta property="og:title" content="Kingu Electrical Co. Ltd| Electrical Engineering Experts">
     <meta property="og:description" content="Quality Electrical Services with a Professional Experience">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.kingueletrical.co.tz">
@@ -28,7 +28,7 @@
         {
           "@type": "ElectricalContractor",
           "@id": "https://www.kingueletrical.co.tz/#organization",
-          "name": "Kingu Electrical Company Limited",
+          "name": "Kingu Electrical",
           "url": "https://www.kingueletrical.co.tz",
           "logo": "https://www.kingueletrical.co.tz/logo.jpg",
           "description": "Leading Tanzanian electrical engineering company providing generator services, PLC automation, HPU conversion, ATS systems, and industrial electrical installations with professional experience.",
