--- a/whatsapp-shop.html
+++ b/whatsapp-shop.html
@@ -942,7 +942,7 @@
             <p>Browse, select, and order electrical products & services directly through WhatsApp. Fast delivery across Tanzania!</p>
             <a href="https://wa.me/255682843552" target="_blank" class="whatsapp-badge" id="whatsappButton">
                 <img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/whatsapp.svg" alt="WhatsApp">
-                Chat on WhatsApp: 0682843552
+                Chat on WhatsApp: 0682 843 552
             </a>
         </div>
     </header>
