--- a/Kingu electrical.html
+++ b/Kingu electrical.html
@@ -143,7 +143,7 @@
     <header id="home">
         <div class="header-content">
             <div class="logo-container">
-                <img src="assets/icons/company-logo.svg" alt="Kingu Electrical Company Limited Logo" class="logo">
+                <img src="assets/icons/logo.jpg" alt="Kingu Electrical Company Limited Logo" class="logo">
             </div>
 
             <h1>Kingu Electrical Company Limited</h1>
