--- a/Kingu electrical.html
+++ b/Kingu electrical.html
@@ -627,7 +627,7 @@
             <h2>Certificates & Compliance</h2>
             <div class="certificate-grid">
                 <div class="certificate-item">
-                    <img src="brela.png.pdf" alt="BRELA Certificate" class="certificate-img">
+                    <img src="assets/icons/brela.png.png" alt="BRELA Certificate" class="certificate-img">
                     <h4>Certificate of Incorporation</h4>
                     <p><strong>BRELA Registration</strong><br>No: 157024493</p>
                 </div>
