--- a/Kingu electrical.html
+++ b/Kingu electrical.html
@@ -633,7 +633,7 @@
                 </div>
 
                 <div class="certificate-item">
-                    <img src="https://images.unsplash.com/photo-1589829545856-d10d557cf95f?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400&q=80" alt="TRA TIN Certificate" class="certificate-img">
+                    <img src="assets/icons/Tin.png" alt="TRA TIN Certificate" class="certificate-img">
                     <h4>TIN Certificate</h4>
                     <p><strong>Tanzania Revenue Authority</strong><br>TIN: 157-024-493</p>
                 </div>
