--- a/Kingu electrical.html
+++ b/Kingu electrical.html
@@ -34,12 +34,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     
-
     <!-- CSS -->
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
+    
     <!-- Google Analytics (replace with your ID) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
     <script>
@@ -138,44 +135,39 @@
     </div>
 
     <!-- WhatsApp Float Button -->
-    <a class="whatsapp" href="https://wa.me/255682843552" target="_blank" aria-label="Chat on WhatsApp" style="display: inline-flex; align-items: center; justify-content: center;">
-  <i class="bi bi-whatsapp" style="font-size: 28px; color: #25D366;"></i>
-</a>
+    <a class="whatsapp" href="https://wa.me/255682843552" target="_blank" aria-label="Chat on WhatsApp">
+        <img src="assets/icons/whatsapp.svg" alt="WhatsApp">
+    </a>
+
     <!-- Header -->
     <header id="home">
         <div class="header-content">
             <div class="logo-container">
-                <img src="assets/icons/logo.jpg" alt="Kingu Electrical Company Limited Logo" class="logo">
+                <img src="assets/icons/company-logo.svg" alt="Kingu Electrical Company Limited Logo" class="logo">
             </div>
 
             <h1>Kingu Electrical Company Limited</h1>
             <p class="tagline">Quality Electrical Services with Professional Experience</p>
 
             <div class="contact-header">
-               <div class="contact-header">
-
-  <a href="mailto:Kinguelectricaltz@gmail.com" class="float-animation" style="animation-delay: 0s;">
-    <i class="bi bi-envelope-fill contact-icon"></i>
-    Kinguelectricaltz@gmail.com
-  </a>
-
-  <a href="tel:+255677014740" class="float-animation" style="animation-delay: 0.2s;">
-    <i class="bi bi-telephone-fill contact-icon"></i>
-    +255 677 014 740
-  </a>
-
-  <a href="tel:+255763957908" class="float-animation" style="animation-delay: 0.4s;">
-    <i class="bi bi-telephone-fill contact-icon"></i>
-    +255 763 957 908
-  </a>
-
-  <a href="tel:+255682843552" class="float-animation" style="animation-delay: 0.6s;">
-    <i class="bi bi-telephone-fill contact-icon"></i>
-    +255 682 843 552
-  </a>
-
-</div>
-
+                <a href="mailto:Kinguelectricaltz@gmail.com" class="float-animation">
+                    <img src="assets/icons/email.svg" alt="Email" class="contact-icon"> 
+                    Kinguelectricaltz@gmail.com
+                </a>
+                <a href="tel:+255677014740" class="float-animation" style="animation-delay: 0.2s;">
+                    <img src="assets/icons/phone.svg" alt="Phone" class="contact-icon"> 
+                    +255 677 014 740
+                </a>
+                <a href="tel:+255763957908" class="float-animation" style="animation-delay: 0.4s;">
+                    <img src="assets/icons/phone.svg" alt="Phone" class="contact-icon"> 
+                    +255 763 957 908
+                </a>
+                <a href="tel:+255682843552" class="float-animation" style="animation-delay: 0.6s;">
+                    <img src="assets/icons/phone.svg" alt="Phone" class="contact-icon"> 
+                    +255 682 843 552
+                </a>
+            </div>
+        </div>
     </header>
 
     <!-- Navigation -->
@@ -277,10 +269,10 @@
                 <h3>⚡ Electrical Emergency?</h3>
                 <p>24/7 Emergency Service Available Across Tanzania</p>
                 <div class="emergency-contact">
-                    <a href="tel:+255677014740" class="emergency-btn" style="display: inline-flex; align-items: center; gap: 10px;">
-  <i class="bi bi-telephone-fill" style="font-size: 22px; color: #ffffff;"></i>
-  CALL NOW: +255 677 014 740
-</a>
+                    <a href="tel:+255677014740" class="emergency-btn">
+                        <img src="assets/icons/phone.svg" alt="Emergency">
+                        CALL NOW: +255 677 014 740
+                    </a>
                     <p>Response Time: <strong>Within 2 hours</strong> in Dar-es-salaam & Arusha</p>
                 </div>
             </div>
@@ -556,34 +548,21 @@
         <!-- WhatsApp Features -->
         <div class="whatsapp-features fade-in">
             <h3>📱 Instant Support via WhatsApp</h3>
-           <div class="whatsapp-buttons">
-
-  <a href="https://wa.me/255677014740?text=Hi! I need a quote for electrical services" 
-     target="_blank" class="whatsapp-option">
-    <i class="bi bi-clipboard-fill" style="margin-right:8px;"></i>
-    Get Instant Quote
-  </a>
-
-  <a href="https://wa.me/255677014740?text=I have an electrical emergency!" 
-     target="_blank" class="whatsapp-option">
-    <i class="bi bi-lightning-fill" style="margin-right:8px;"></i>
-    Emergency Help
-  </a>
-
-  <a href="https://wa.me/255677014740?text=I need technical advice" 
-     target="_blank" class="whatsapp-option">
-    <i class="bi bi-lightbulb-fill" style="margin-right:8px;"></i>
-    Technical Advice
-  </a>
-
-  <a href="https://wa.me/255677014740?text=I want to order spare parts" 
-     target="_blank" class="whatsapp-option">
-    <i class="bi bi-tools" style="margin-right:8px;"></i>
-    Order Parts
-  </a>
-
-</div>
- </div>
+            <div class="whatsapp-buttons">
+                <a href="https://wa.me/255677014740?text=Hi! I need a quote for electrical services" target="_blank" class="whatsapp-option">
+                    📋 Get Instant Quote
+                </a>
+                <a href="https://wa.me/255677014740?text=I have an electrical emergency!" target="_blank" class="whatsapp-option">
+                    ⚡ Emergency Help
+                </a>
+                <a href="https://wa.me/255677014740?text=I need technical advice" target="_blank" class="whatsapp-option">
+                    💡 Technical Advice
+                </a>
+                <a href="https://wa.me/255677014740?text=I want to order spare parts" target="_blank" class="whatsapp-option">
+                    🛠️ Order Parts
+                </a>
+            </div>
+        </div>
 
         <!-- Service Area -->
         <section id="service-area" class="fade-in">
@@ -648,13 +627,13 @@
             <h2>Certificates & Compliance</h2>
             <div class="certificate-grid">
                 <div class="certificate-item">
-                    <img src="assets/icons/brela.png" alt="BRELA Certificate" class="certificate-img">
+                    <img src="https://images.unsplash.com/photo-1589829545856-d10d557cf95f?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400&q=80" alt="BRELA Certificate" class="certificate-img">
                     <h4>Certificate of Incorporation</h4>
                     <p><strong>BRELA Registration</strong><br>No: 157024493</p>
                 </div>
 
                 <div class="certificate-item">
-                    <img src="assets/icons/Tin.png" alt="TRA TIN Certificate" class="certificate-img">
+                    <img src="https://images.unsplash.com/photo-1589829545856-d10d557cf95f?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&h=400&q=80" alt="TRA TIN Certificate" class="certificate-img">
                     <h4>TIN Certificate</h4>
                     <p><strong>Tanzania Revenue Authority</strong><br>TIN: 157-024-493</p>
                 </div>
@@ -683,11 +662,10 @@
             <div class="cta-content">
                 <h2>Need Professional Electrical Services?</h2>
                 <p>Contact our expert engineers today for reliable and cost-effective electrical solutions tailored to your specific needs. We're available 24/7 for emergency services.</p>
-                <a href="https://wa.me/255677014740" target="_blank" class="btn" style="display: inline-flex; align-items: center; gap: 8px;">
-  <i class="bi bi-whatsapp" style="font-size: 20px; color: #25D366;"></i>
-  Chat with us on WhatsApp
-</a>
-
+                <a href="https://wa.me/255677014740" target="_blank" class="btn">
+                    <img src="assets/icons/whatsapp.svg" alt="WhatsApp"> 
+                    Chat with us on WhatsApp
+                </a>
             </div>
         </div>
 
@@ -696,44 +674,38 @@
             <h2>Contact Us</h2>
 
             <div class="grid mb-30">
-               <div class="card">
-  <div class="card-icon">
-    <i class="bi bi-geo-alt-fill"></i>
-  </div>
-  <h3>Location</h3>
-  <p><strong>Headquarters:</strong> Dar-es-Salaam & Arusha, Tanzania</p>
-  <p><strong>Address:</strong> Plot No. 485, Block 43, Nzasa</p>
-  <p><strong>P.O. Box:</strong> 62313, Dar es Salaam</p>
-</div>
+                <div class="card">
+                    <div class="card-icon">
+                        <img src="assets/icons/location.svg" alt="Location">
+                    </div>
+                    <h3>Location</h3>
+                    <p><strong>Headquarters:</strong> Dar-es-salaam & Arusha, Tanzania</p>
+                    <p><strong>Address:</strong> Plot No. 485, Block 43, Nzasa</p>
+                    <p><strong>P.O. Box:</strong> 62313, Dar es Salaam</p>
+                </div>
 
-<div class="card">
-  <div class="card-icon">
-    <i class="bi bi-telephone-fill"></i>
-  </div>
-  <h3>Contact Info</h3>
-  <p><strong>Phone:</strong> +255 677 014 740</p>
-  <p><strong>Phone:</strong> +255 763 957 908</p>
-  <p><strong>Phone:</strong> +255 682 843 552</p>
-  <p><strong>Email:</strong> Kinguelectricaltz@gmail.com</p>
-  <p>
-    <strong>Facebook:</strong> 
-    <a href="https://www.facebook.com/KinguElectrical/" target="_blank" 
-       style="color: var(--medium-green); text-decoration: none; border-bottom: 2px solid var(--accent-orange);">
-      /KinguElectrical
-    </a>
-  </p>
-</div>
+                <div class="card">
+                    <div class="card-icon">
+                        <img src="assets/icons/phone.svg" alt="Contact">
+                    </div>
+                    <h3>Contact Info</h3>
+                    <p><strong>Phone:</strong> +255 677 014 740</p>
+                    <p><strong>Phone:</strong> +255 763 957 908</p>
+                    <p><strong>Phone:</strong> +255 682 843 552</p>
+                    <p><strong>Email:</strong> Kinguelectricaltz@gmail.com</p>
+                    <p><strong>Facebook:</strong> <a href="https://www.facebook.com/KinguElectrical/" target="_blank" style="color: var(--medium-green); text-decoration: none; border-bottom: 2px solid var(--accent-orange);">/KinguElectrical</a></p>
+                </div>
 
-<div class="card">
-  <div class="card-icon">
-    <i class="bi bi-clock-fill"></i>
-  </div>
-  <h3>Business Hours</h3>
-  <p><strong>Monday - Friday:</strong> 8:00 AM - 6:00 PM</p>
-  <p><strong>Saturday:</strong> 9:00 AM - 2:00 PM</p>
-  <p><strong>Emergency Services:</strong> 24/7 Available</p>
-</div>
-
+                <div class="card">
+                    <div class="card-icon">
+                        <img src="assets/icons/time.svg" alt="Business Hours">
+                    </div>
+                    <h3>Business Hours</h3>
+                    <p><strong>Monday - Friday:</strong> 8:00 AM - 6:00 PM</p>
+                    <p><strong>Saturday:</strong> 9:00 AM - 2:00 PM</p>
+                    <p><strong>Emergency Services:</strong> 24/7 Available</p>
+                </div>
+            </div>
 
             <h3 class="text-center mb-30">Send Us a Message</h3>
             <form action="https://formspree.io/f/xjvqwvjg" method="POST" id="contact-form">
@@ -758,20 +730,17 @@
                     <h3>Kingu Electrical</h3>
                     <p>Leading electrical engineering company in Tanzania providing professional power solutions and electrical products since 2022.</p>
                     <p>Certified & Registered Electrical Engineering Company with nationwide coverage.</p>
-                   <div class="social-links">
-  <a href="https://www.facebook.com/KinguElectrical/" target="_blank" aria-label="Facebook">
-    <i class="bi bi-facebook" style="font-size: 24px; color: #1877F2;"></i>
-  </a>
-
-  <a href="#" target="_blank" aria-label="LinkedIn">
-    <i class="bi bi-linkedin" style="font-size: 24px; color: #0A66C2;"></i>
-  </a>
-
-  <a href="#" target="_blank" aria-label="Instagram">
-    <i class="bi bi-instagram" style="font-size: 24px; color: #C13584;"></i>
-  </a>
-</div>
-
+                    <div class="social-links">
+                        <a href="https://www.facebook.com/KinguElectrical/" target="_blank" aria-label="Facebook">
+                            <img src="assets/icons/facebook.svg" alt="Facebook">
+                        </a>
+                        <a href="#" aria-label="LinkedIn">
+                            <img src="assets/icons/linkedin.svg" alt="LinkedIn">
+                        </a>
+                        <a href="#" aria-label="Instagram">
+                            <img src="assets/icons/instagram.svg" alt="Instagram">
+                        </a>
+                    </div>
                 </div>
 
                 <div class="footer-column">
@@ -786,20 +755,15 @@
                 </div>
 
                 <div class="footer-column">
-                   <div class="contact-info-section">
-  <h3>Contact Info</h3>
-
-  <p><i class="bi bi-geo-alt-fill contact-icon"></i> P.O. Box 62313, Dar es Salaam</p>
-  <p><i class="bi bi-telephone-fill contact-icon"></i> +255 677 014 740, +255 763 957 908, +255 682 843 552</p>
-  <p><i class="bi bi-envelope-fill contact-icon"></i> Kinguelectricaltz@gmail.com</p>
-  <p>
-    <a href="https://www.facebook.com/KinguElectrical/" target="_blank">
-      <i class="bi bi-facebook contact-icon"></i> Facebook Page
-    </a>
-  </p>
-  <p><i class="bi bi-building contact-icon"></i> Plot No. 485, Block 43, Nzasa, Dar-es-Salaam, Tanzania</p>
-</div>
-
+                    <h3>Contact Info</h3>
+                    <p><img src="assets/icons/location.svg" alt="Location" class="contact-icon"> P.O. Box 62313, Dar es Salaam</p>
+                    <p><img src="assets/icons/phone.svg" alt="Phone" class="contact-icon"> +255 677 014 740, +255763957908, +255682843552</p>
+                    <p><img src="assets/icons/email.svg" alt="Email" class="contact-icon"> Kinguelectricaltz@gmail.com</p>
+                    <p><a href="https://www.facebook.com/KinguElectrical/" target="_blank" style="color:inherit; text-decoration:none;">
+                        <img src="assets/icons/facebook.svg" alt="Facebook" class="contact-icon"> Facebook Page
+                    </a></p>
+                    <p><img src="assets/icons/company.svg" alt="Office" class="contact-icon"> Plot No. 485, Block 43, Nzasa, Dar-es-salaam, Tanzania</p>
+                </div>
             </div>
 
             <div class="copyright">
