--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('/image/background.png');
+            background-image: url(background.jpg);
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
