--- a/Kinguelectrical-shop.html
+++ b/Kinguelectrical-shop.html
@@ -86,7 +86,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" fill="white" opacity="0.05"><path d="M30,50 Q50,30 70,50 Q50,70 30,50 Z"/></svg>');
+            background: url('Background.jpg');
         }
         
         .shop-header h1 {
@@ -765,7 +765,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" fill="white" opacity="0.05"><path d="M30,50 Q50,30 70,50 Q50,70 30,50 Z"/></svg>');
+            background: url('Background.jpg');
         }
         
         .quick-order-content {
