--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
             justify-content: center;
             width: 100%;
             height: 100%;
+            background: url(Background.jpg);
             position: absolute;
             top: 0;
             left: 0;
@@ -156,6 +157,7 @@
         .welcome-logo {
             width: 250px;
             height: auto;
+            background: url(Background.jpg);
             margin-bottom: 3rem;
             opacity: 0;
             animation: logoFloatIn 2s ease-out 0.5s forwards;
@@ -166,6 +168,7 @@
             font-family: 'Poppins', sans-serif;
             font-size: 3.5rem;
             font-weight: 700;
+            background: url(Background.jpg);
             color: white;
             text-align: center;
             margin-bottom: 1rem;
@@ -181,6 +184,7 @@
             color: #64ffda;
             text-align: center;
             max-width: 800px;
+            background: url(Background.jpg);
             margin: 0 auto 4rem;
             opacity: 0;
             animation: fadeInUp 1.5s ease-out 2s forwards;
@@ -222,6 +226,7 @@
             justify-content: center;
             width: 100%;
             height: 100%;
+            background: url(Background.jpg);
             position: absolute;
             top: 0;
             left: 0;
@@ -261,7 +266,7 @@
         .about-content {
             max-width: 900px;
             width: 100%;
-            background: rgba(255, 255, 255, 0.1);
+            background: url(Background.jpg);
             backdrop-filter: blur(15px);
             border-radius: 20px;
             padding: 3rem;
@@ -282,6 +287,7 @@
             left: -100%;
             width: 100%;
             height: 2px;
+            background: url(Background.jpg);
             background: linear-gradient(90deg, transparent, #64ffda, transparent);
             animation: contentGlow 3s ease-in-out 2.5s infinite;
         }
@@ -316,6 +322,7 @@
             width: 100%;
             height: 2px;
             background: #64ffda;
+            background: url(Background.jpg);
             transform: scaleX(0);
             animation: highlightPulse 3s ease-in-out 3s infinite;
         }
@@ -472,6 +479,7 @@
             all: unset !important;
             width: 100% !important;
             height: auto !important;
+            background: url(Background.jpg);
             background: rgba(13, 59, 31, 0.9) !important;
             color: white !important;
             padding: 4rem 0 !important;
@@ -717,6 +725,7 @@
         .btn-Kingu-shop:hover {
             transform: translateY(-3px);
             box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+            background: url(Background.jpg);
             background: #f8f9fa;
         }
         
