--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+    <span style="color:green">Kingu</span> <span style="color:red">Electrical</span> <span style="color:green">company limited</span>
+
+
+<em style="color:red; font-style:italic">quality electrical services with professional experience</em>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
