--- a/index.html
+++ b/index.html
@@ -535,23 +535,26 @@
         }
         
         /* ===== FIXED BACKGROUND IMAGE ===== */
-        body::before {
-            content: '';
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-image: url('Background.jpg');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            opacity: 0.4;
-            z-index: -1;
-            filter: brightness(1.1);
-        }
-        
+        body {
+              position: relative;
+             }
+   body::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('Background.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    opacity: 0.9;
+    z-index: -1;
+    filter: brightness(1.1);
+    pointer-events: none;
+  }
         /* Ensure content is readable over background */
         .container, 
         header,
