--- a/index.html
+++ b/index.html
@@ -2430,7 +2430,8 @@
         <!-- Resources Section -->
         <section id="resources">
             <div class="content-wrapper">
-                <h2 class="animated-text">Free Electrical Resources</h2>
+                <h2 class="animated-text"><span style="color:#1a5632">Free Electrical Resources</span></h2>
+                 </div>
                 <div class="resources-grid">
                     <div class="resource-item animated-text" style="animation-delay: 0.1s">
                         <h3>Generator Maintenance Checklist</h3>
