--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kingu<span style="color:#1a5632"> Electrical</span><span style="color:#dc3545"> Company</span> Ltd | <span style="color:#1a5632">Electrical</span> Engineering Experts in Tanzania</title>
+    <title>Kingu Electrical Company Ltd | Electrical Engineering Experts in Tanzania </title>
     <meta name="description" content="Leading Tanzanian Electrical Engineering Company providing Generator services, PLC programming, HPU conversion, ATS systems, CCTV, and Industrial Electrical Installations.">
     <meta name="keywords" content="Kingu Electrical, Electrical Company Tanzania, Generator Installation, PLC Programming, HPU Conversion, ATS Design, Electrical Engineers Arusha, EWURA Licensed, BRELA Registered">
     <meta name="mobile-web-app-capable" content="yes">
