--- a/index.html
+++ b/index.html
@@ -1879,7 +1879,7 @@
             <h1 class="welcome-title">
                 <span style="color:#1a5632">Kingu</span>
 
-                <img src="assets/icons/kingu.ico"
+                <img src="assets/icons/kingu.svg"
                      alt=""
                      class="welcome-icon-img">
 
@@ -1909,7 +1909,7 @@
     <h2 class="about-title">
         <span style="color:#1a5632">Kingu</span>
 
-        <img src="assets/icons/kingu.ico"
+        <img src="assets/icons/kingu.svg"
              alt=""
              class="about-icon-img">
 
