--- a/index.html
+++ b/index.html
@@ -3,10 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <a href="/">
-    <img src="images/assets/company-logo.png" alt="Kingu Electrical Company Ltd Logo" width="200">
-  </a>
-
     <title>Kingu Electrical Company Ltd | Electrical Engineering Experts in Tanzania</title>
     <meta name="description" content="Leading Tanzanian Electrical Engineering Company providing Generator services, PLC programming, HPU conversion, ATS systems, CCTV, and Industrial Electrical Installations.">
     <meta name="keywords" content="Kingu Electrical, Electrical Company Tanzania, Generator Installation, PLC Programming, HPU Conversion, ATS Design, Electrical Engineers Arusha, EWURA Licensed, BRELA Registered">
@@ -1578,7 +1574,14 @@
             </div>
         </div>
     </div>
-
+<!-- MAIN HEADER -->
+    <header class="site-header">
+        <a href="/" class="logo-link">
+            <img src="/images/assets/company-logo.png"
+                 alt="Kingu Electrical Company Ltd Logo"
+                 class="site-logo">
+        </a>
+    </header>
     <!-- Promo Banner -->
     <div class="promo-banner">
         <div class="promo-content">
