--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: linear-gradient(135deg, #ffffff 0%, #f8f9fa 100%);
+            background-image: url('Background.jpg');
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -145,7 +145,7 @@
             justify-content: center;
             width: 100%;
             height: 100%;
-            background: linear-gradient(135deg, #1a5632 0%, #0d3d21 100%);
+            background-image: url('Background.jpg');
             opacity: 1;
             transition: opacity 1s ease;
             padding: 1rem;
@@ -160,7 +160,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100"><circle cx="50" cy="50" r="2" fill="%23ffffff" opacity="0.1"/></svg>');
+            background-image: url('Background.jpg');
             animation: moveBackground 20s linear infinite;
         }
         
