--- a/index.html
+++ b/index.html
@@ -1805,11 +1805,11 @@
         <img src="https://kingueletrical.com/assets/icons/company-logo.png" alt="Kingu Electrical Company Limited" class="welcome-logo">
         <h1 class="welcome-title">
             <span style="color: #1a5632">Kingu</span>
-            <span style="color:#1a5632">⚡</span>
+            <span style="color: #ff0000">⚡</span>
             <span style="color: #ff0000">Electrical</span> 
-            <span style="color:#1a5632">Company Limited</span>
+            <span style="color: #1a5632">Company Limited</span>
         </h1>
-        <p class="welcome-tagline" style="color: #1a5632; font-weight: bold; text-shadow: 
+        <p class="welcome-tagline" style="color: #ff0000; font-weight: bold; text-shadow: 
             1px 1px 0 #fff,
             -1px -1px 0 #fff,
             1px -1px 0 #fff,
@@ -1844,6 +1844,7 @@
         </div>
     </div>
 </div>
+       
     <!-- Promo Banner -->
     <div class="promo-banner">
         <div class="promo-content">
