--- a/index.html
+++ b/index.html
@@ -1809,17 +1809,9 @@
             <span style="color: #ff0000">Electrical</span> 
             <span style="color: #1a5632">Company Limited</span>
         </h1>
-        <p class="welcome-tagline" style="color: #ff0000; font-weight: bold; text-shadow: 
-            1px 1px 0 #fff,
-            -1px -1px 0 #fff,
-            1px -1px 0 #fff,
-            -1px 1px 0 #fff,
-            0px 1px 0 #fff,
-            1px 0px 0 #fff,
-            0px -1px 0 #fff,
-            -1px 0px 0 #fff;">
-            Engineering reliable power solutions for Tanzania since 2017
-        </p>  
+      <p class="welcome-tagline" style="color: #cc0000; font-weight: bold;">
+    Engineering reliable power solutions for Tanzania since 2017
+</p> 
         
         <div class="loading-stats">
             <div class="loading-stat">
