--- a/index.html
+++ b/index.html
@@ -1805,8 +1805,7 @@
         <img src="https://kingueletrical.com/assets/icons/company-logo.png" alt="Kingu Electrical Company Limited" class="welcome-logo">
         <h1 class="welcome-title">
             <span style="color: #1a5632">Kingu</span>
-            <span style="color: #ff0000">⚡</span>
-            <span style="color: #ff0000">Electrical</span> 
+            <span style="color: #cc0000">Electrical</span> 
             <span style="color: #1a5632">Company Limited</span>
         </h1>
       <p class="welcome-tagline" style="color: #cc0000; font-weight: bold;">
