--- a/index.html
+++ b/index.html
@@ -1802,7 +1802,7 @@
     <!-- Loading Animation (20 seconds total) -->
   <div id="loading-screen">
     <div class="loading-welcome" id="welcomePage">
-        <img src="https://kingueletrical.com/assets/icons/company-logo.png" alt="Kingu Electrical Company Limited" class="welcome-logo">
+        <img src="assets/icons/company-logo.png" alt="Kingu Electrical Company Limited" class="welcome-logo">
         <h1 class="welcome-title">
             <span style="color: #1a5632">Kingu</span>
             <span style="color: #cc0000">Electrical</span> 
