--- a/index.html
+++ b/index.html
@@ -165,13 +165,13 @@ update the index.html   here full <!DOCTYPE html>
         }
         
         .welcome-logo {
-            width: 400px;
+            width: 200px;
             max-width: 80vw; 
             height: auto;
             margin-bottom: 1.5rem;
             opacity: 0;
             animation: logoFloatIn 2s ease-out 0.5s forwards;
-            filter: drop-shadow(0 5px 15px rgba(0, 0, 0, 0.5));
+            filter: drop-shadow(0 8px 16px rgba(0,0,0,0.2));
             z-index: 2;
         }
         
